# DropboxAutomation

./: .env.sample  .gitignore  Dockerfile  README.md  ai.py  entrypoint.sh  main.py  processer_local.py  processor_dropbox.py  push.sh  pyproject.toml  settings.py
utils/: dbx.py  pdf.py
